# cronch

./: .buildinfo  .clang-format  CMakeLists.txt  README.md  README.rst  backends.html  building.html  conan.cmake  concepts.html  genindex.html  index.html  metadata.html  objects.inv  quick_start.html  readme.html  search.html  searchindex.js  utils.cmake
.github/workflows/: ci.yml  ci.yml.disabled  update_docs.yml
_sources/: backends.rst.txt  building.rst.txt  concepts.rst.txt  index.rst.txt  metadata.rst.txt  quick_start.rst.txt
bench/: CMakeLists.txt  json.cpp  main.cpp  types.hpp  xml.cpp
ci/: conanfile.txt  gcc.profile  msvc.profile
docs/source/: backends.rst  concepts.rst  conf.py  index.rst  metadata.rst  quick_start.rst  readme.rst
docs/source/code/: boost_json_example.cpp  metadata_meta_type.cpp  metadata_use_example.cpp
docs/source/func/: high_level.rst
examples/: CMakeLists.txt  json.cpp  json_to_xml.cpp  props.cpp
examples/custom_backend/: plain.cpp
examples/deserialization/: json.cpp
examples/serialization/: basic_json.cpp
include/cronch/: ast.hpp  concepts.hpp  deserialize.hpp  meta.hpp  metadata.hpp  metatypes.hpp  serialize.hpp  tuple_util.hpp
include/cronch/json/: boost.hpp  concepts.hpp  json.hpp  nloh.hpp
include/cronch/meta/: concepts.hpp  containers.hpp  reflect.hpp
include/cronch/xml/: pugi.hpp
test/: CMakeLists.txt
tests/: CMakeLists.txt  deserialize.cpp  json_boost.cpp  json_nloh.cpp  main.cpp  serialize.cpp  types.hpp
